changes done in dev

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             </div>
         <!--Nested comment form-->
             <div class="comment-area">
-                <input type="text" placeholder="write comment..." id="reply-box">
-                <button id="reply_comment">Add</button>
+                <input type="text" placeholder="write reply..." id="reply-box">
             </div>
             <!-- Nested form end -->
 
@@ -35,13 +34,11 @@
         <!-- main comment form -->
         <div class="comment-area">
             <input type="text" placeholder="write comment..." id="comment_box">
-            <button id="add_comment">Add</button>
         </div>
          <!-- main comment end -->
     </div>
    </div>
-</div>   
-   
+</div> 
     <!-- Main applicatoin js -->
     <script src="app.js"></script>
 </html>
