--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <div class="comment-area">
             <input type="text" placeholder="write comment..." id="comment_box">
         </div>
+        <ul id="emoji">
+
+        </ul>
          <!-- main comment end -->
     </div>
    </div>
