--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bind Function</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
+    <title>Widget Comments</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
