--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3>JavaScript Nested Comment Widget</h3>
             <p>A JavaScript Nested comment widget app which is developed in pure vanilla JS. you can add comments and reply on any comments on multi level.</p>
 
-            <p class="copyright"> <img src="https://pngimg.com/uploads/heart/heart_PNG51337.png" class="heart" alt=""> Design & Develoed By <a href="https://github.com/amirSohel007" target="_blank">Amir Sohel</a></p>
+            <p class="copyright"> <img src="https://pngimg.com/uploads/heart/heart_PNG51337.png" class="heart" alt=""> Designed & Developed By <a href="https://github.com/amirSohel007" target="_blank">Amir Sohel</a></p>
         </figure>
     </div>
    <div class="comment-section">
